--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -18,12 +18,12 @@
 		<PackageReference Include="Microsoft.Orleans.Hosting.Kubernetes" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="8.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0-rc.2.24473.5" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0-rc.2.24473.5" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0-rc.2.24473.5" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Streaming" Version="8.2.0" />
-		<PackageReference Include="Aspire.Azure.Data.Tables" Version="9.0.0-rc.1.24511.1" />
-		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0-rc.1.24511.1" />
+		<PackageReference Include="Aspire.Azure.Data.Tables" Version="9.0.0" />
+		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0" />
 	</ItemGroup>
 
 </Project>
