--- a/TransactionSilo/TransactionSilo.csproj
+++ b/TransactionSilo/TransactionSilo.csproj
@@ -7,9 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.0.0-rc.1.24511.1" />
-        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0-rc.1.24511.1" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-rc.2.24474.3" />
+        <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.0.0" />
+        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
