--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Aspire.Azure.Data.Tables" Version="9.0.0" />
 		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+		<PackageReference Include="Scalar.AspNetCore" Version="1.2.44" />
 	</ItemGroup>
 
 	<ItemGroup>
