--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,8 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Azure.Data.Tables" Version="9.0.0" />
-		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0" />
+		<PackageReference Include="Aspire.Azure.Data.Tables" Version="9.1.0-preview.1.24575.1" />
+		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.1.0-preview.1.24575.1" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
 		<PackageReference Include="Scalar.AspNetCore" Version="1.2.44" />
 	</ItemGroup>
