--- a/Scaler/Scaler.csproj
+++ b/Scaler/Scaler.csproj
@@ -12,8 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Azure.Data.Tables" Version="9.0.0" />
-		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0" />
+		<PackageReference Include="Aspire.Azure.Data.Tables" Version="9.1.0-preview.1.24575.1" />
+		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.1.0-preview.1.24575.1" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
 	</ItemGroup>
 
